# lammps-developer-tutorial-ikkem

./: README.md
00.setup/: README.md
00.setup/plugins/: CMakeLists.txt  log.lammps
00.setup/test/: input.lmp
00.setup/test/ref_output/: log.lammps
01.compute_test/: README.md  install.sh
01.compute_test/lmp_plugins/: CMakeLists.txt  compute_test_scalar_atom.cpp  compute_test_scalar_atom.h  compute_test_vector_atom.cpp
01.first_trial/: README.md
01.first_trial/lmp_plugins/: LAMMPSInterfaceCXX.cmake  compute_test_coord_atom.h  compute_test_vector_atom.h  mylmpplugin.cpp
01.first_trial/plugins/: compute_test_coord_atom.cpp
01.first_trial/test/: input.lmp
01.first_trial/test/ref_output/: log.lammps  ref.lammpstrj  test.lammpstrj  test_coord.lammpstrj  test_scalar.lammpstrj
02.include_pkgs/: README.md
02.include_pkgs/lmp_plugins/: CMakeLists.txt  ewald_test.cpp  mylmpplugin.cpp
02.include_pkgs/plugins/: ewald_test.h
02.include_pkgs/test/: input.lmp
02.include_pkgs/test/ref_output/: log.lammps  ref.lammpstrj  test.lammpstrj
